Added some styles to background

--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -1,5 +1,5 @@
 .custom-navbar {
-    background-color: #f8b400; /* Light orange background */
+    background-color: #e2b22c; /* Light orange background */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow */
 }
 
