--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,14 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('logo.jpg');
+    background: linear-gradient(
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)  
+  ), url('flight.avif');
+ 
     background-size: cover;
     background-position: center;
-    filter: blur(1px);
+   
     z-index: -1; /* Ensure it's behind the content */
 }
 
